<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.wordpress.iibrahimov.weatherlogger.DisplayActivity">

    <TextView
        android:id="@+id/textViewCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textViewTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewCoord"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:text="@string/temperature"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTemp"
        android:layout_alignParentStart="true"
        android:text="@string/date"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tempCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewTemp"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/textViewTemp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dateNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/textViewDate"
        android:layout_marginStart="12dp"
        android:layout_toEndOf="@id/textViewDate"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewDate"
        android:layout_alignParentEnd="true"
        android:onClick="moreDetails"
        android:text="@string/more_details"
        android:textAllCaps="false"
        android:textSize="14sp" />

</RelativeLayout>